--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<div class="name">Hasnain Abbas</div>
 				<div class="role">Web Developer</div>
 			</div>
+			
 			<div class="resume_item resume_profile">
 				<div class="resume_title">Profile</div>
 				<div class="resume_info">As a web developer with expertise in HTML, CSS, Javascript, React, Wordpress, Node Js, Express JS, MongoDB and freelancing platforms, I have a diverse set of skills that allow me to create high-quality websites and web applications. Whether it's designing responsive and visually appealing websites using HTML and CSS, developing interactive and dynamic user interfaces using Javascript and React, or building complex server-side applications using Node Js, I am committed to delivering excellent results that meet the unique needs of each project. With my proficiency in various freelancing platforms, I am well-equipped to work with clients from different backgrounds and ensure a smooth and streamlined workflow.</div>
@@ -38,7 +39,7 @@
 				</div>
 				<div class="resume_info">
 					<div class="resume_subtitle">Email</div>
-					<div class="resume_subinfo">hasnainwebdev.123@gmail.com</div>
+					<div class="resume_subinfo">hasnain72.qureshi@gmail.com</div>
 				</div>
 			</div>
 			<div class="resume_item resume_contact">
