--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
 			<div class="resume_item resume_contact">
 				<div class="resume_title">References</div>
 				<div class="resume_info">
-					<div class="resume_subtitle">Mohsin Amir</div>
+					<div class="resume_subtitle">Muhammad Iqbal</div>
 					<div class="resume_subinfo">CEO IdeoMetriX</div>
 				</div>
 				<div class="resume_info">
-					<div class="resume_subtitle">Muhammad Iqbal</div>
+					<div class="resume_subtitle">Mohsin Amir</div>
 					<div class="resume_subinfo">CTO IdeoMetriX</div>
 				</div>
+				
 			</div>
 			<div class="resume_item resume_skills">
 				<div class="resume_title">Skills</div>
@@ -76,7 +77,7 @@
 						<div class="skills_left">Javascript</div>
 						<div class="skills_bar">
 							<p>
-								<span style="width: 75%"></span>
+								<span style="width: 80%"></span>
 							</p>
 						</div>
 					</div>
@@ -84,7 +85,7 @@
 						<div class="skills_left">React JS</div>
 						<div class="skills_bar">
 							<p>
-								<span style="width: 70%"></span>
+								<span style="width: 80%"></span>
 							</p>
 						</div>
 					</div>
@@ -92,7 +93,7 @@
 						<div class="skills_left">Bootstrap</div>
 						<div class="skills_bar">
 							<p>
-								<span style="width: 70%"></span>
+								<span style="width: 80%"></span>
 							</p>
 						</div>
 					</div>
@@ -199,12 +200,18 @@
 		<div class="resume_item resume_experience">
 			<div class="resume_title">Websites I have worked with</div>
 			<div class="websites_info">
+				<a target="_blank" href="http://product.bizopspro.com//">product.bizopspro.com</a>
 				<a target="_blank" href="https://digihunar.com/">digihunar.com</a>
 				<a target="_blank"  href="https://ideometrix.com/">ideometrix.com</a>
 				<a target="_blank"  href="https://autoto-app.com/">autoto-app.com</a>
 				<a target="_blank"  href="https://jaguarcryptofamily.com/">jaguarcryptofamily.com</a>
 				<a target="_blank"  href="https://metaverse-project09.netlify.app/">metaverse-project</a>
+				<a target="_blank"  href="https://bnb10.netlify.app/">bnb10</a>
+				<a target="_blank"  href="https://angel-cisneros.netlify.app/">angel-cisneros</a>
+				<a target="_blank"  href="https://food-site-01.netlify.app/">food-site-01</a>
+				<a target="_blank"  href="https://text-utils-01.netlify.app/">text-utils-01</a>
 				<a target="_blank"  href="https://ipdkiu.netlify.app/">ipdkiu</a>
+				<a target="_blank"  href="https://hasnain-resume.netlify.app/ ">hasnain-resume</a>
 			</div>
 		</div>
 		<div class="resume_item resmue_interests">
