--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
               <div class="resume_subtitle">Email</div>
               <div class="resume_subinfo">hasnain72.qureshi@gmail.com</div>
             </div>
+            
+          </div>
+          <div class="resume_item resume_contact">
+            <div class="resume_title">Freelance Profiles</div>
             <div class="resume_info">
               <div class="resume_subtitle">Upwork</div>
               <a
@@ -61,6 +65,10 @@
                 >Hasnain Abbas</a
               >
             </div>
+          </div>
+		  <div class="resume_item resume_address">
+            <div class="resume_title">Github</div>
+            <a href="https://github.com/Hasnain49/" target="_blank" class="resume_info">Hasnain49<br /></a>
           </div>
           <div class="resume_item resume_contact">
             <div class="resume_title">References</div>
@@ -73,6 +81,7 @@
               <div class="resume_subinfo">CTO IdeoMetriX</div>
             </div>
           </div>
+		  
           <div class="resume_item resume_skills">
             <div class="resume_title">Skills</div>
             <div class="resume_info">
