new-projects-added

--- a/index.html
+++ b/index.html
@@ -252,8 +252,14 @@
         <div class="resume_item resume_experience">
           <div class="resume_title">Websites I have worked with</div>
           <div class="websites_info">
+            <a target="_blank" href="https://skysetlogistics.com/"
+              >SkySetLogistics</a
+            >
+            <a target="_blank" href="https://www.brainvoy.ai/"
+              >Brainvoy</a
+            >
             <a target="_blank" href="http://product.bizopspro.com//"
-              >product.bizopspro.com</a
+              >BizopsPro</a
             >
             <a target="_blank" href="https://digihunar.com/">digihunar.com</a>
             <a target="_blank" href="https://ideometrix.com/">ideometrix.com</a>
@@ -271,8 +277,8 @@
             <a target="_blank" href="https://food-site-01.netlify.app/"
               >food-site-01</a
             >
-            <a target="_blank" href="https://text-utils-01.netlify.app/"
-              >text-utils-01</a
+            <a target="_blank" href="https://text-wizard.netlify.app/"
+              >Text Wizard</a
             >
             <a target="_blank" href="https://ipdkiu.netlify.app/">ipdkiu</a>
             <a target="_blank" href="https://hasnain-resume.netlify.app/ "
