--- a/index.html
+++ b/index.html
@@ -265,24 +265,24 @@
             <a target="_blank" href="https://ideometrix.com/">ideometrix.com</a>
             <a target="_blank" href="https://autoto-app.com/">autoto-app.com</a>
             <a target="_blank" href="https://jaguarcryptofamily.com/"
-              >jaguarcryptofamily.com</a
+              >JaguarCryptoFamily</a
             >
             <a target="_blank" href="https://metaverse-project09.netlify.app/"
-              >metaverse-project</a
+              >Metaverse Project</a
             >
             <a target="_blank" href="https://bnb10.netlify.app/">bnb10</a>
             <a target="_blank" href="https://angel-cisneros.netlify.app/"
-              >angel-cisneros</a
+              >Angel Cisneros</a
             >
             <a target="_blank" href="https://food-site-01.netlify.app/"
-              >food-site-01</a
+              >Food Site</a
             >
             <a target="_blank" href="https://text-wizard.netlify.app/"
               >Text Wizard</a
             >
             <a target="_blank" href="https://ipdkiu.netlify.app/">ipdkiu</a>
             <a target="_blank" href="https://hasnain-resume.netlify.app/ "
-              >hasnain-resume</a
+              >Hasnain's Resume</a
             >
           </div>
         </div>
