changes in portfolio

--- a/index.html
+++ b/index.html
@@ -261,16 +261,16 @@
             <a target="_blank" href="http://product.bizopspro.com//"
               >BizopsPro</a
             >
-            <a target="_blank" href="https://digihunar.com/">digihunar.com</a>
-            <a target="_blank" href="https://ideometrix.com/">ideometrix.com</a>
-            <a target="_blank" href="https://autoto-app.com/">autoto-app.com</a>
+            <a target="_blank" href="https://digihunar.com/">DigiHunar</a>
+            <a target="_blank" href="https://ideometrix.com/">IdeoMetriX</a>
+            <a target="_blank" href="https://autoto-app.com/">Autoto App</a>
             <a target="_blank" href="https://jaguarcryptofamily.com/"
               >JaguarCryptoFamily</a
             >
             <a target="_blank" href="https://metaverse-project09.netlify.app/"
               >Metaverse Project</a
             >
-            <a target="_blank" href="https://bnb10.netlify.app/">bnb10</a>
+            <a target="_blank" href="https://bnb10.netlify.app/">BNB10</a>
             <a target="_blank" href="https://angel-cisneros.netlify.app/"
               >Angel Cisneros</a
             >
@@ -280,7 +280,7 @@
             <a target="_blank" href="https://text-wizard.netlify.app/"
               >Text Wizard</a
             >
-            <a target="_blank" href="https://ipdkiu.netlify.app/">ipdkiu</a>
+            <a target="_blank" href="https://ipdkiu.netlify.app/">IPD KIU</a>
             <a target="_blank" href="https://hasnain-resume.netlify.app/ "
               >Hasnain's Resume</a
             >
