--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <a target="_blank" href="https://www.brainvoy.ai/"
               >Brainvoy</a
             >
-            <a target="_blank" href="http://product.bizopspro.com//"
+            <a target="_blank" href="http://product.bizopspro.com/"
               >BizopsPro</a
             >
             <a target="_blank" href="https://digihunar.com/">DigiHunar</a>
