--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="resume_item resume_address">
             <div class="resume_title">Address</div>
-            <div class="resume_info">Gilgit<br /></div>
+            <div class="resume_info">Satellite Town Rawalpindi<br /></div>
           </div>
           <div class="resume_item resume_contact">
             <div class="resume_title">Contact</div>
